--- a/src/locales/az.json
+++ b/src/locales/az.json
@@ -1630,14 +1630,31 @@
     "password": "Şifrəm",
     "firstName": "Ad",
     "lastName": "Soyad",
+    "username": "İstifadəçi adı",
     "birthDate": "Doğum tarixi",
     "address": "Ünvan",
     "phone": "Telefon",
+    "email": "E-poçt",
+    "gender": "Cins",
+    "genderMale": "Kişi",
+    "genderFemale": "Qadın",
     "enter": "Daxil et",
     "currentPassword": "Cari şifrə",
     "newPassword": "Yeni şifrə",
-    "confirmPassword": "Yeni şifrəni təsdiq et",
-    "save": "Yadda saxla"
+    "confirmPassword": "Şifrəni təsdiqlə",
+    "save": "Yadda saxla",
+    "saving": "Yadda saxlanır...",
+    "updateSuccess": "Məlumatlar uğurla yeniləndi",
+    "updateError": "Xəta baş verdi",
+    "passwordMismatch": "Yeni şifrələr uyğun gəlmir",
+    "passwordRequired": "Bütün sahələr doldurulmalıdır",
+    "passwordUpdateSuccess": "Şifrə uğurla yeniləndi",
+    "passwordUpdateError": "Şifrə yenilənərkən xəta baş verdi",
+    "contactInfo": "ƏLAQƏ MƏLUMATLARI",
+    "complexInfo": "KOMPLEKS MƏLUMATLARI",
+    "complex": "Kompleks",
+    "additionalInfo": "ƏLAVƏ MƏLUMATLAR",
+    "personalCode": "Şəxsi kod"
   },
   "kpi": {
     "pageTitle": "Əməkdaş KPI hesabatı",
@@ -1941,5 +1958,33 @@
       "enabled": "Aktiv",
       "disabled": "Deaktiv"
     }
+  },
+  "settings": {
+    "title": "Parametrlər",
+    "description": "Hesab parametrlərinizi idarə edin",
+    "general": "Ümumi",
+    "notifications": "Bildirişlər",
+    "security": "Təhlükəsizlik",
+    "language": "Dil",
+    "languageDescription": "İstifadə etmək istədiyiniz dili seçin",
+    "languageChanged": "Dil dəyişdirildi",
+    "theme": "Tema",
+    "themeDescription": "Qaranlıq və ya işıqlı tema seçin",
+    "themeChanged": "Tema dəyişdirildi",
+    "dark": "Qaranlıq",
+    "light": "İşıqlı",
+    "emailNotifications": "Email Bildirişləri",
+    "emailNotificationsDescription": "Email vasitəsilə bildirişlər alın",
+    "pushNotifications": "Push Bildirişləri",
+    "pushNotificationsDescription": "Brauzer bildirişləri alın",
+    "smsNotifications": "SMS Bildirişləri",
+    "smsNotificationsDescription": "SMS vasitəsilə bildirişlər alın",
+    "save": "Saxla",
+    "saving": "Saxlanılır...",
+    "notificationsSaved": "Bildiriş ayarları saxlanıldı",
+    "notificationsSaveError": "Bildiriş ayarları saxlanarkən xəta baş verdi",
+    "securitySettings": "Təhlükəsizlik Parametrləri",
+    "securityDescription": "Şifrə dəyişdirmək üçün Profil səhifəsinə keçin",
+    "goToProfile": "Profili Dəyişdir"
   }
 }
