--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1624,14 +1624,31 @@
     "password": "My password",
     "firstName": "First name",
     "lastName": "Last name",
+    "username": "Username",
     "birthDate": "Birth date",
     "address": "Address",
     "phone": "Phone",
+    "email": "Email",
+    "gender": "Gender",
+    "genderMale": "Male",
+    "genderFemale": "Female",
     "enter": "Enter",
     "currentPassword": "Current password",
     "newPassword": "New password",
-    "confirmPassword": "Confirm new password",
-    "save": "Save"
+    "confirmPassword": "Confirm password",
+    "save": "Save",
+    "saving": "Saving...",
+    "updateSuccess": "Information updated successfully",
+    "updateError": "An error occurred",
+    "passwordMismatch": "New passwords do not match",
+    "passwordRequired": "All fields are required",
+    "passwordUpdateSuccess": "Password updated successfully",
+    "passwordUpdateError": "An error occurred while updating password",
+    "contactInfo": "CONTACT INFORMATION",
+    "complexInfo": "COMPLEX INFORMATION",
+    "complex": "Complex",
+    "additionalInfo": "ADDITIONAL INFORMATION",
+    "personalCode": "Personal code"
   },
   "kpi": {
     "pageTitle": "Employee KPI Report",
@@ -1929,5 +1946,33 @@
       "enabled": "Enabled",
       "disabled": "Disabled"
     }
+  },
+  "settings": {
+    "title": "Settings",
+    "description": "Manage your account settings",
+    "general": "General",
+    "notifications": "Notifications",
+    "security": "Security",
+    "language": "Language",
+    "languageDescription": "Select your preferred language",
+    "languageChanged": "Language changed",
+    "theme": "Theme",
+    "themeDescription": "Choose dark or light theme",
+    "themeChanged": "Theme changed",
+    "dark": "Dark",
+    "light": "Light",
+    "emailNotifications": "Email Notifications",
+    "emailNotificationsDescription": "Receive notifications via email",
+    "pushNotifications": "Push Notifications",
+    "pushNotificationsDescription": "Receive browser notifications",
+    "smsNotifications": "SMS Notifications",
+    "smsNotificationsDescription": "Receive notifications via SMS",
+    "save": "Save",
+    "saving": "Saving...",
+    "notificationsSaved": "Notification settings saved",
+    "notificationsSaveError": "Error saving notification settings",
+    "securitySettings": "Security Settings",
+    "securityDescription": "Go to Profile page to change password",
+    "goToProfile": "Go to Profile"
   }
 }
