--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1629,14 +1629,31 @@
     "password": "Мой пароль",
     "firstName": "Имя",
     "lastName": "Фамилия",
+    "username": "Имя пользователя",
     "birthDate": "Дата рождения",
     "address": "Адрес",
     "phone": "Телефон",
+    "email": "Электронная почта",
+    "gender": "Пол",
+    "genderMale": "Мужской",
+    "genderFemale": "Женский",
     "enter": "Введите",
     "currentPassword": "Текущий пароль",
     "newPassword": "Новый пароль",
-    "confirmPassword": "Подтвердите новый пароль",
-    "save": "Сохранить"
+    "confirmPassword": "Подтвердите пароль",
+    "save": "Сохранить",
+    "saving": "Сохранение...",
+    "updateSuccess": "Информация успешно обновлена",
+    "updateError": "Произошла ошибка",
+    "passwordMismatch": "Новые пароли не совпадают",
+    "passwordRequired": "Все поля обязательны для заполнения",
+    "passwordUpdateSuccess": "Пароль успешно обновлен",
+    "passwordUpdateError": "Произошла ошибка при обновлении пароля",
+    "contactInfo": "КОНТАКТНАЯ ИНФОРМАЦИЯ",
+    "complexInfo": "ИНФОРМАЦИЯ О КОМПЛЕКСЕ",
+    "complex": "Комплекс",
+    "additionalInfo": "ДОПОЛНИТЕЛЬНАЯ ИНФОРМАЦИЯ",
+    "personalCode": "Личный код"
   },
   "kpi": {
     "pageTitle": "Отчет KPI сотрудников",
@@ -1934,5 +1951,33 @@
       "enabled": "Включено",
       "disabled": "Выключено"
     }
+  },
+  "settings": {
+    "title": "Настройки",
+    "description": "Управляйте настройками вашей учетной записи",
+    "general": "Общие",
+    "notifications": "Уведомления",
+    "security": "Безопасность",
+    "language": "Язык",
+    "languageDescription": "Выберите предпочитаемый язык",
+    "languageChanged": "Язык изменен",
+    "theme": "Тема",
+    "themeDescription": "Выберите темную или светлую тему",
+    "themeChanged": "Тема изменена",
+    "dark": "Темная",
+    "light": "Светлая",
+    "emailNotifications": "Email Уведомления",
+    "emailNotificationsDescription": "Получать уведомления по электронной почте",
+    "pushNotifications": "Push Уведомления",
+    "pushNotificationsDescription": "Получать уведомления браузера",
+    "smsNotifications": "SMS Уведомления",
+    "smsNotificationsDescription": "Получать уведомления по SMS",
+    "save": "Сохранить",
+    "saving": "Сохранение...",
+    "notificationsSaved": "Настройки уведомлений сохранены",
+    "notificationsSaveError": "Ошибка при сохранении настроек уведомлений",
+    "securitySettings": "Настройки безопасности",
+    "securityDescription": "Перейдите на страницу профиля, чтобы изменить пароль",
+    "goToProfile": "Перейти к профилю"
   }
 }
