sign in validation error

--- a/src/locales/az.json
+++ b/src/locales/az.json
@@ -277,8 +277,10 @@
       "usernameLabel": "İstifadəçi adı",
       "identifierLabel": "Email, İstifadəçi adı, Telefon və ya Ad",
       "identifierPlaceholder": "Daxil edin",
+      "identifierRequired": "Email, Username, Phone və ya Name daxil edin",
       "emailLabel": "Email",
       "passwordLabel": "Şifrə",
+      "passwordRequired": "Şifrə daxil edin",
       "submit": "Daxil ol",
       "loading": "Yüklənir...",
       "invalidCredentialsError": "İstifadəçi adı və ya şifrə yanlışdır",
