--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -277,8 +277,10 @@
       "usernameLabel": "Username",
       "identifierLabel": "Email, Username, Phone or Name",
       "identifierPlaceholder": "Enter Email, Username, Phone or Name",
+      "identifierRequired": "Please enter Email, Username, Phone or Name",
       "emailLabel": "Email",
       "passwordLabel": "Password",
+      "passwordRequired": "Please enter password",
       "submit": "Sign In",
       "loading": "Loading...",
       "invalidCredentialsError": "Invalid username or password",
