--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -276,8 +276,10 @@
       "usernameLabel": "Логин",
       "identifierLabel": "Email, Имя пользователя, Телефон или Имя",
       "identifierPlaceholder": "Введите Email, Username, Phone или Name",
+      "identifierRequired": "Пожалуйста, введите Email, Username, Phone или Name",
       "emailLabel": "Email",
       "passwordLabel": "Пароль",
+      "passwordRequired": "Пожалуйста, введите пароль",
       "submit": "Войти",
       "loading": "Загрузка...",
       "invalidCredentialsError": "Неверный логин или пароль",
