aside design updated

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -22,6 +22,7 @@
     "settings": "Settings"
   },
   "sidebar": {
+    "welcome": "Welcome",
     "dashboard": "Dashboard",
     "finance": "Finance",
     "invoices": "Invoices",
