--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,6 +22,7 @@
     "settings": "Настройки"
   },
   "sidebar": {
+    "welcome": "Добро пожаловать",
     "dashboard": "Панель",
     "finance": "Финансы",
     "invoices": "Счета",
