--- a/src/locales/az.json
+++ b/src/locales/az.json
@@ -22,6 +22,7 @@
     "settings": "Parametrlər"
   },
   "sidebar": {
+    "welcome": "Xoş gəldin",
     "dashboard": "Panel",
     "finance": "Maliyyə",
     "invoices": "Fakturalar",
