refactor: improve mobile responsiveness and component modularity
- Refactor dashboard navbar and sidenav into modular component structure
- Add mobile animations and improve mobile design
- Fix duplicate user menu issue on desktop
- Add missing translations for statistics.pageTitle
- Enhance mobile UX with compact layouts and better spacing

--- a/src/locales/az.json
+++ b/src/locales/az.json
@@ -199,6 +199,7 @@
     }
   },
   "statistics": {
+    "pageTitle": "Statistika",
     "todayMoney": {
       "title": "Bu günün gəliri",
       "subtitle": "Bu günün pulu",
