--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -199,6 +199,7 @@
     }
   },
   "statistics": {
+    "pageTitle": "Statistics",
     "todayMoney": {
       "title": "Today's Money",
       "subtitle": "Today's Money",
