--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -198,6 +198,7 @@
     }
   },
   "statistics": {
+    "pageTitle": "Статистика",
     "todayMoney": {
       "title": "Доход за сегодня",
       "subtitle": "Доход за сегодня",
