--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1165,9 +1165,15 @@
   "mtk": {
     "pageTitle": "MTK",
     "loading": "Loading...",
+    "saving": "Saving...",
+    "noData": "No data found",
     "table": {
       "id": "ID",
       "name": "Name",
+      "status": "Status",
+      "email": "Email",
+      "phone": "Phone",
+      "address": "Address",
       "actions": "Actions"
     },
     "actions": {
@@ -1177,28 +1183,86 @@
       "edit": "Edit",
       "delete": "Delete"
     },
+    "view": {
+      "title": "MTK Details",
+      "close": "Close",
+      "notProvided": "Not provided"
+    },
     "filter": {
       "title": "MTK filter",
       "name": "MTK name",
       "enterName": "Enter",
+      "status": "Status",
+      "allStatus": "All",
+      "email": "Email",
+      "enterEmail": "Enter email",
+      "phone": "Phone",
+      "enterPhone": "Enter phone",
+      "address": "Address",
+      "enterAddress": "Enter address",
+      "basicFilters": "Basic Filters",
+      "contactFilters": "Contact Filters",
+      "activeFilters": "Active filters are present",
       "clear": "Clear",
       "close": "Close",
       "apply": "Apply"
+    },
+    "form": {
+      "basicInfo": "Basic Information",
+      "name": "Name",
+      "enterName": "Enter name",
+      "status": "Status",
+      "active": "Active",
+      "inactive": "Inactive",
+      "metaInfo": "Additional Information",
+      "latitude": "Latitude",
+      "enterLatitude": "Enter latitude",
+      "longitude": "Longitude",
+      "enterLongitude": "Enter longitude",
+      "description": "Description",
+      "enterDescription": "Enter description",
+      "email": "Email",
+      "enterEmail": "Enter email",
+      "phone": "Phone",
+      "enterPhone": "Enter phone",
+      "address": "Address",
+      "enterAddress": "Enter address",
+      "website": "Website",
+      "enterWebsite": "Enter website",
+      "colorCode": "Color Code",
+      "enterColorCode": "Enter color code",
+      "colorPicker": "Pick color",
+      "contactInfo": "Contact Information",
+      "latValidation": "Latitude must be between -90 and 90",
+      "lngValidation": "Longitude must be between -180 and 180"
     },
     "create": {
       "title": "Add new MTK",
       "name": "MTK name",
       "enterName": "Enter",
       "cancel": "Cancel",
-      "save": "Save"
+      "save": "Save",
+      "success": "MTK created successfully",
+      "error": "Error creating MTK"
     },
     "edit": {
       "title": "Edit MTK information",
       "name": "MTK name",
       "enterName": "Enter",
       "cancel": "Cancel",
-      "save": "Save"
+      "save": "Save",
+      "success": "MTK updated successfully",
+      "error": "Error updating MTK"
     },
+    "delete": {
+      "title": "Delete MTK",
+      "confirm": "Delete MTK?",
+      "message": "Are you sure you want to delete this MTK?",
+      "warning": "This action cannot be undone.",
+      "success": "MTK deleted successfully",
+      "error": "Error deleting MTK"
+    },
+    "deleting": "Deleting...",
     "pagination": {
       "prev": "Previous",
       "next": "Next"
