--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1097,29 +1097,73 @@
   },
   "services": {
     "pageTitle": "Повторяющиеся услуги",
+    "loading": "Загрузка...",
+    "saving": "Сохранение...",
+    "deleting": "Удаление...",
+    "noData": "Данные не найдены",
     "add": "Добавить",
     "edit": "Редактировать",
     "delete": "Удалить",
     "cancel": "Отмена",
     "save": "Сохранить",
     "table": {
-      "title": "Заголовок",
-      "amount": "Сумма",
+      "id": "ID",
+      "name": "Название",
+      "description": "Описание",
+      "price": "Цена",
+      "createdAt": "Дата создания",
+      "updatedAt": "Дата обновления",
       "actions": "Действия"
     },
-    "createModal": {
-      "title": "Добавить новую услугу"
+    "actions": {
+      "view": "Просмотр",
+      "edit": "Редактировать",
+      "delete": "Удалить"
     },
-    "editModal": {
-      "title": "Изменить информацию об услуге"
+    "create": {
+      "title": "Добавить новую услугу",
+      "success": "Услуга успешно создана",
+      "error": "Ошибка при создании услуги"
     },
-    "deleteModal": {
+    "edit": {
+      "title": "Изменить информацию об услуге",
+      "success": "Услуга успешно обновлена",
+      "error": "Ошибка при обновлении услуги"
+    },
+    "delete": {
       "title": "Удалить услугу",
-      "message": "Вы уверены, что хотите удалить эту услугу?"
+      "message": "Вы уверены, что хотите удалить эту услугу?",
+      "warning": "Это действие нельзя отменить.",
+      "success": "Услуга успешно удалена",
+      "error": "Ошибка при удалении услуги"
+    },
+    "view": {
+      "title": "Информация об услуге",
+      "close": "Закрыть",
+      "notProvided": "Не предоставлено",
+      "createdAt": "Дата создания",
+      "updatedAt": "Дата обновления"
+    },
+    "filter": {
+      "title": "Фильтр услуг",
+      "name": "Название услуги",
+      "enterName": "Введите",
+      "apply": "Применить",
+      "clear": "Очистить",
+      "close": "Закрыть"
     },
     "form": {
-      "title": "Заголовок",
-      "amount": "Сумма"
+      "basicInfo": "Основная информация",
+      "name": "Название",
+      "enterName": "Введите название",
+      "description": "Описание",
+      "enterDescription": "Введите описание",
+      "price": "Цена",
+      "enterPrice": "Введите цену"
+    },
+    "pagination": {
+      "prev": "Предыдущая",
+      "next": "Следующая"
     }
   },
   "electronicDocuments": {
