--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -2095,5 +2095,77 @@
     "securitySettings": "Настройки безопасности",
     "securityDescription": "Перейдите на страницу профиля, чтобы изменить пароль",
     "goToProfile": "Перейти к профилю"
+  },
+  "configurator": {
+    "title": "Конфигуратор панели",
+    "description": "Посмотрите наши опции панели",
+    "sections": {
+      "sidenav": {
+        "title": "Боковая панель",
+        "collapsed": {
+          "title": "Свернуто",
+          "description": "Сворачивает боковую панель, показывая только иконки. Разворачивается при наведении."
+        },
+        "flatMenu": {
+          "title": "Плоское меню",
+          "description": "Скрывает подменю и отображает все элементы в плоском списке. Заголовки родительских меню скрыты."
+        },
+        "expandAll": {
+          "title": "Развернуть все подменю",
+          "description": "Держит все подменю автоматически открытыми. Не работает с плоским меню."
+        },
+        "size": {
+          "title": "Размер",
+          "description": "Изменяет размер боковой панели (Маленький, Средний, Большой).",
+          "options": {
+            "small": "Маленький",
+            "medium": "Средний",
+            "large": "Большой"
+          }
+        },
+        "position": {
+          "title": "Позиция",
+          "description": "Изменяет позицию боковой панели (Слева, Справа).",
+          "options": {
+            "left": "Слева",
+            "right": "Справа"
+          }
+        },
+        "shadow": {
+          "title": "Тень",
+          "description": "Добавляет или удаляет тень у боковой панели."
+        },
+        "border": {
+          "title": "Граница",
+          "description": "Показывает или скрывает границу боковой панели."
+        }
+      },
+      "navbar": {
+        "title": "Навбар",
+        "fixed": {
+          "title": "Закреплено",
+          "description": "Закрепляет навбар в верхней части экрана, остается на месте при прокрутке."
+        },
+        "transparent": {
+          "title": "Прозрачный",
+          "description": "Делает навбар прозрачным, позволяя видеть фоновый контент."
+        },
+        "size": {
+          "title": "Размер",
+          "description": "Изменяет размер навбара (Маленький, Средний, Большой)."
+        }
+      },
+      "layout": {
+        "title": "Макет",
+        "compactMode": {
+          "title": "Компактный режим",
+          "description": "Делает интерфейс более компактным, уменьшая расстояние между элементами."
+        },
+        "rtlMode": {
+          "title": "RTL режим",
+          "description": "Переключает интерфейс в режим справа налево (RTL), подходит для арабского и иврита."
+        }
+      }
+    }
   }
 }
